--- a/contribute.rmd
+++ b/contribute.rmd
@@ -16,13 +16,12 @@ book even better:
 * If you spot a typo, feel free to edit the underlying page and send a pull 
   request. If you've never done this before, the process is very easy: 
   
-    * Click the edit this page on the sidebar
+    * Click the edit this page on the sidebar.
   
-    * Make the changes using github's in-page editor and save.
+    * Make the changes using github's in-page editor, add a brief description
+      of the change below the editor (fixing typos is perfectly adequate),
+      then Propose the file change.
     
-    * Submit a pull request including a brief description of your changes: 
-      fixing typos is perfectly adequate.
-      
-    * If you make significant changes, include the phrase "I assign the 
-      copyright of this contribution to Hadley Wickham" - I need this so I can 
-      publish the printed book.
+    * Submit a pull request. If you make significant changes, include the phrase
+      "I assign the copyright of this contribution to Hadley Wickham" - I need
+      this so I can publish the printed book.
